# prod-second-stage

solution/: Dockerfile  Makefile  pyproject.toml  requirements.txt  tasks.todo
solution/project/: .env  manage.py
solution/project/api/: apps.py  authentication.py  handlers.py  pagination.py  urls.py  utils.py
solution/project/api/countries/: apps.py  models.py  serializers.py  views.py
solution/project/api/countries/migrations/: 0001_initial.py
solution/project/api/friends/: apps.py  models.py  serializers.py  urls.py  views.py
solution/project/api/friends/migrations/: 0001_initial.py
solution/project/api/me/: apps.py  serializers.py  urls.py  views.py
solution/project/api/migrations/: 0001_initial.py  0002_alter_postdislike_unique_together_and_more.py
solution/project/api/ping/: apps.py  views.py
solution/project/api/posts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
solution/project/api/posts/migrations/: 0001_initial.py
solution/project/api/profiles/: apps.py  urls.py  views.py
solution/project/api/users/: admin.py  apps.py  authentication.py  models.py  serializers.py  urls.py  views.py
solution/project/api/users/migrations/: 0001_initial.py
solution/project/config/: asgi.py  settings.py  urls.py
solution/project/countries/: models.py  serializers.py  views.py
solution/project/countries/migrations/: 0001_initial.py
solution/project/ping/: views.py
